web-infras/parser/tests/fixtures/esprima/ES6/template-literals/strict-octal-literal/output.txt
[SyntaxError]: Invalid hexadecimal escape sequence. (1,15)
1|'use strict'; `\00`;
 |             ^
